projects/pirateapps/kustomize/overlays/prowlarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prowlarr.lab.tailandtraillabs.com
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prowlarr.lab.tailandtraillabs.com`)
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: wildcard-tls-prod
